WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151879
Modern IDB: storage/indexeddb/cursor-update.html fails
https://bugs.webkit.org/show_bug.cgi?id=151879
Summary
Modern IDB: storage/indexeddb/cursor-update.html fails
Brady Eidson
Reported
2015-12-04 12:03:11 PST
Modern IDB: storage/indexeddb/cursor-update.html fails The IDBRequests for cursors do not have the correct source.
Attachments
Patch v1
(2.58 KB, patch)
2015-12-04 12:04 PST
,
Brady Eidson
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-04 12:04:31 PST
Created
attachment 266648
[details]
Patch v1
Brady Eidson
Comment 2
2015-12-04 12:17:36 PST
http://trac.webkit.org/changeset/193433
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug