Modern IDB: storage/indexeddb/cursor-update.html fails. https://bugs.webkit.org/show_bug.cgi?id=151879

Reviewed by Oliver Hunt.

Source/WebCore:

No new tests (At least one failing test now passes).

* Modules/indexeddb/client/IDBRequestImpl.cpp:
(WebCore::IDBClient::IDBRequest::IDBRequest):

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/170010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193433 268f45cc-cd09-0410-ab3c-d52691b4dbfc